# assignment

./: .gitignore  README.md  env.sample  pyproject.toml  test.ipynb
contact_manager/: manage.py
contact_manager/app/: admin.py  managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
contact_manager/app/migrations/: 0001_initial.py  0002_alter_contact_description.py
contact_manager/contact_manager/: asgi.py  settings.py  urls.py  wsgi.py
docs/: auth.md  db.md
